--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Perfect Cup</title>
     <link rel="icon" type="image/x-icon" href="media/images/logo.png">
    <link rel="stylesheet" href="css/style.css">
-   <link rel="stylesheet" href="css/stylesheet.css" type="text/css" charset="utf-8" />
+ 
    <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Jaldi:wght@400;700&family=Jomhuria&display=swap" rel="stylesheet">
@@ -167,23 +167,23 @@
     <div class="flex-container-footer">
 
       <div class="flex-item-hours">
-        <p>GET IN TOUCH</p>
+        <h5>GET IN TOUCH</h5>
 <p>The Perfect Cup
   <br>
   4700 N Damen Ave, Chicago, IL
-  <br>
-  Open 7 days a week  6:30am-6:00pm
+ 
 </p>
 
 <div id="insta">
   <a href="https://www.instagram.com/perfectcupchicago/">
     <img src="media/images/instagram.png" alt="instagram" style="width: 50px; height: 50px;">
   </a>
-</div>
+
 <div id="facebook">
   <a href="https://www.facebook.com/perfectcupchicago/">
     <img src="media/images/facebook.png" alt="instagram" style="width: 50px; height: 50px;">
   </a>
+</div>
 </div>
 
 
@@ -191,11 +191,19 @@
 
       <div class="flex-item-hours2">
 
-hiiii
+        <h5>HOURS</h5>
+        <p>Monday	7am–6pm<br>
+        Tuesday	7am–6pm<br>
+        Wednesday	7am–6pm<br>
+        Thursday	7am–6pm<br>
+        Friday	7am-6pm<br>
+        Saturday	7am–6pm<br>
+        Sunday	7am–6pm<br></p>
 </div>
 
 
 <div class="flex-item-hours3">
+  <h5>NAVIGATION</h5>
       <div id="home">
         <a href="index.html">HOME</div>
     
