--- a/index.html
+++ b/index.html
@@ -148,16 +148,16 @@
 
       <div class="scrollmenu">
 
-      <img id="coffee"
+      <img id="coffee-scroll"
         src="media/images/outside1.jpg">
 
-        <img id="coffee"
+        <img id="coffee-scroll"
         src="media/images/iceddrink1.jpg">
 
-        <img id="coffee"
+        <img id="coffee-scroll"
         src="media/images/ryan1.jpg">
 
-        <img id="coffee"
+        <img id="coffee-scroll"
         src="media/images/outside2.jpg">
 
     </div>
