--- a/html/about.html
+++ b/html/about.html
@@ -76,15 +76,15 @@
       </div> 
       <div class="our-story2">
         <h3>About Us</h3>
-        <h4>fkjdfksdjfalskfhdaksjfbsdkfjsd</h4>
+        <h4>Welcome to The Perfect Cup, your cozy neighborhood coffee haven since 1997. Nestled in the heart of our vibrant Ravenswood and Lincoln Square communities, we’ve been brewing exceptional coffee and creating a warm, welcoming space for friends, family, and neighbors for over two decades.</h4>
       </div>
     </div>
 
     <div class="our-story">
       <div class="our-story2">
         <h3>Our Journey</h3>
-        <h4>Our story started with a love for coffee and a dream to bring the community together. Over the years, Ravenswood Coffee has become more than just a coffee shop; it's a community hub where friendships are forged, ideas are shared, and cultures are celebrated.
-        We take pride in sourcing high-quality beans and crafting each cup with care. Our menu features a variety of specialty drinks and treats inspired by Filipino flavors, ensuring there's something for everyone to enjoy.</h4>
+        <h4>Our story started with a love for coffee and a dream to bring the community together. Over the years, The Perfect Cup has become more than just a coffee shop; it's a community hub where friendships are forged, ideas are shared, and cultures are celebrated.
+        We take pride in sourcing high-quality beans and crafting each cup with care. At The Perfect Cup, everyone is welcome.</h4>
       </div>
       <div class="our-story1">
         <img id="coffee-pages" src="../media/images/latte.jpg">
@@ -104,44 +104,74 @@
   </div> 
 
   <div class="flex-container-footer">
+
     <div class="flex-item-hours">
       <h5>GET IN TOUCH</h5>
-      <p>The Perfect Cup
-        <br>
-        4700 N Damen Ave, Chicago, IL
-      </p>
-      <div id="insta">
-        <a href="https://www.instagram.com/perfectcupchicago/">
-          <img src="../media/images/instagram.png" alt="instagram" style="width: 50px; height: 50px;">
-        </a>
-      </div>
-      <div id="facebook">
-        <a href="https://www.facebook.com/perfectcupchicago/">
-          <img src="../media/images/facebook.png" alt="facebook" style="width: 50px; height: 50px;">
-        </a>
-      </div>
+<p>The Perfect Cup
+<br>
+4700 N Damen Ave, Chicago, IL
+
+</p>
+
+<div id="insta">
+<a href="https://www.instagram.com/perfectcupchicago/">
+  <img src="../media/images/instagram.png" alt="instagram" style="width: 50px; height: 50px;">
+</a>
+
+<div id="facebook">
+<a href="https://www.facebook.com/perfectcupchicago/">
+  <img src="../media/images/facebook.png" alt="instagram" style="width: 50px; height: 50px;">
+</a>
+</div>
+</div>
+
+
     </div>
 
     <div class="flex-item-hours2">
+
       <h5>HOURS</h5>
-      <p>Monday 7am–6pm<br>
-      Tuesday 7am–6pm<br>
-      Wednesday 7am–6pm<br>
-      Thursday 7am–6pm<br>
-      Friday 7am-6pm<br>
-      Saturday 7am–6pm<br>
-      Sunday 7am–6pm<br></p>
-    </div>
+      <p>Monday	7am–6pm<br>
+      Tuesday	7am–6pm<br>
+      Wednesday	7am–6pm<br>
+      Thursday	7am–6pm<br>
+      Friday	7am-6pm<br>
+      Saturday	7am–6pm<br>
+      Sunday	7am–6pm<br></p>
+</div>
 
-    <div class="flex-item-hours3">
-      <h5>NAVIGATION</h5>
-      <div id="home"><a href="../index.html">HOME</a></div>
-      <div id="about"><a href="../html/about.html">ABOUT</a></div>
-      <div id="cafe"><a href="../html/cafe.html">CAFE</a></div>
-      <div id="contact"><a href="../html/contact.html">CONTACT</a></div>
-    </div>
-  </div>
 
+<div class="flex-item-hours3">
+<h5>NAVIGATION</h5>
+    <div id="home">
+      <a href="../index.html">HOME</div>
+  
+            <div id="about">
+              <a href="../html/about.html">ABOUT</div>
+  
+                <div id="cafe">
+                  <a href="../html/cafe.html">CAFE</div>
+  
+                    <div id="contact">
+                      <a href="../html/contact.html">CONTACT</div>
+  
+                    <!-- <div id="insta">
+                      <a href="https://www.instagram.com/perfectcupchicago/">
+                        <img src="media/images/instagram.png" alt="instagram" style="width: 50px; height: 50px;">
+                      </a>
+                    </div>
+  
+                    <div id="facebook">
+                      <a href="https://www.facebook.com/perfectcupchicago/">
+                        <img src="media/images/facebook.png" alt="instagram" style="width: 50px; height: 50px;">
+                      </a>
+                    </div>  -->
+              
+</div>
+    </div>
+  
+                  
+ 
   <script>
     function myFunction() {
       var x = document.getElementById("myLinks");
