--- a/index.html
+++ b/index.html
@@ -54,23 +54,17 @@
   <!-- Top Navigation Menu -->
   <div class="topnav">
 
-      <a href="#home" class="active"><h1>The Perfect Cup</h1></a>
+      <a href="#home" class="active">The Perfect Cup</a>
  
   
     <!-- Navigation links (hidden by default) -->
     <div id="myLinks">
         <a href="index.html"id="burger">HOME</a>
         <a href="html/about.html"id="burger">ABOUT</a>
-        <div id="burger">
-         <a href="https://www.instagram.com/perfectcupchicago/">
-           <img src="media/images/instagram.png" alt="burger" style="width: 50px; height: 50px;">
-         </a>
-       </div>
-       <div id="burger">
-         <a href="https://www.facebook.com/perfectcupchicago/">
-           <img src="media/images/facebook.png" alt="burger" style="width: 50px; height: 50px;">
-         </a>
-       </div>
+        <a href="html/cafe.html"id="burger">CAFE</a>
+        <a href="html/contact.html"id="burger">CONTACT</a>
+  
+    
       </div>
     <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
