--- a/html/cafe.html
+++ b/html/cafe.html
@@ -41,26 +41,21 @@
   <!-- Load an icon library to show a hamburger menu (bars) on small screens -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-  <!-- Top Navigation Menu -->
-  <div class="topnav">
-    <a href="https://kaylasuess.com/" class="active"> 
-  </a>
-    <!-- Navigation links (hidden by default) -->
-    <div id="myLinks">
-        <a href="index.html"id="chome">home</a>
-        <a href="html/about.html"id="about">about</a>
-        <div id="insta">
-         <a href="https://www.instagram.com/perfectcupchicago/">
-           <img src="media/images/instagram.png" alt="instagram" style="width: 50px; height: 50px;">
-         </a>
-       </div>
+   <!-- Top Navigation Menu -->
+   <div class="topnav">
 
-       <div id="facebook">
-         <a href="https://www.facebook.com/perfectcupchicago/">
-           <img src="media/images/facebook.png" alt="instagram" style="width: 50px; height: 50px;">
-         </a>
-       </div>
-      </div>
+    <a href="#home" class="active">The Perfect Cup</a>
+
+
+  <!-- Navigation links (hidden by default) -->
+  <div id="myLinks">
+      <a href="../index.html"id="burger">HOME</a>
+      <a href="../html/about.html"id="burger">ABOUT</a>
+      <a href="../html/cafe.html"id="burger">CAFE</a>
+      <a href="../html/contact.html"id="burger">CONTACT</a>
+
+  
+    </div>
     <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
       <i class="fa fa-bars"></i>
