--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   <!-- Top Navigation Menu -->
   <div class="topnav">
 
-      <a href="#home" class="active">The Perfect Cup</a>
+      <a href="#home" class="active"><h3>The Perfect Cup</a>
  
   
     <!-- Navigation links (hidden by default) -->
@@ -133,7 +133,7 @@
      <h3>Our Story</h3>
       <br>
       <h4>
-        The Perfect Cup is a family-owned and operated coffee shop that has been a beloved fixture in the Lincoln Square/Ravenswood neighborhoods since 1997!
+        The Perfect Cup is a family-owned and operated coffee shop that has been a beloved fixture in the Lincoln Square & Ravenswood neighborhoods since 1997!
         
 
         At The Perfect Cup, we strive for excellence in every cup, providing our customers with a warm, welcoming atmosphere and the highest quality coffee experience.
