--- a/html/about.html
+++ b/html/about.html
@@ -69,7 +69,7 @@
 
     <div class="our-story">
       <div class="our-story1">
-        <img id="coffee-pages" src="../media/images/latte.jpg">
+        <img id="coffee-pages" src="../media/images/shelf.png">
       </div> 
       <div class="our-story2">
         <h3>About Us</h3>
@@ -79,7 +79,7 @@
 
     <div class="our-story">
       <div class="our-story1">
-        <img id="coffee-pages" src="../media/images/latte.jpg">
+        <img id="coffee-pages" src="../media/images/syrups2.png">
       </div> 
       <div class="our-story2">
         <h3>Our Journey</h3>
@@ -91,7 +91,7 @@
 
     <div class="our-story">
       <div class="our-story1">
-        <img id="coffee-pages" src="../media/images/latte.jpg">
+        <img id="coffee-pages" src="../media/images/pastries.png">
       </div> 
       <div class="our-story2">
         <h3>Our Commitment</h3>
