--- a/html/cafe.html
+++ b/html/cafe.html
@@ -132,7 +132,7 @@
 
 <div class="our-story1">
   <img id="coffee-pages"
-  src="../media/images/latte.jpg">
+  src="../media/images/iceddrink2.jpg">
 
   </div> 
 
@@ -174,7 +174,7 @@
 
     <div class="our-story1">
       <img id="coffee-pages"
-      src="../media/images/Umbria_06.jpg">
+      src="../media/images/turkey.png">
     
       </div> 
     
