--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   <!-- Top Navigation Menu -->
   <div class="topnav">
 
-      <a href="#home" class="active"><h3>The Perfect Cup</a>
+      <a href="#home" class="active">The Perfect Cup</a>
  
   
     <!-- Navigation links (hidden by default) -->
