--- a/html/cafe.html
+++ b/html/cafe.html
@@ -388,7 +388,7 @@
         </div>
 
         <div class="our-story1">
-            <img id="coffee-pages" src="../media/images/Umbria_06.jpg">
+            <img id="coffee" src="../media/images/Umbria_06.jpg">
           </div> 
       </div>
 
