--- a/html/contact.html
+++ b/html/contact.html
@@ -11,6 +11,29 @@
     <link href="https://fonts.googleapis.com/css2?family=Jaldi:wght@400;700&family=Jomhuria&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Jaldi:wght@400;700&family=Jomhuria&family=Mogra&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Jaldi:wght@400;700&family=Jomhuria&family=Mogra&family=Righteous&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Jaldi:wght@400;700&family=Jomhuria&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Jaldi:wght@400;700&family=Jomhuria&family=Mogra&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Jaldi:wght@400;700&family=Jomhuria&family=Mogra&family=Righteous&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Unica+One&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Notable&family=Unica+One&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Notable&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&family=Unica+One&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+
+
     <script type="importmap">
     {
       "imports": {
@@ -78,7 +101,7 @@
     
 
         <div id="map">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11866.188410977109!2d-87.6793681!3d41.967062!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fd2184073f2c3%3A0x2de13d6d8da8da39!2sThe%20Perfect%20Cup!5e0!3m2!1sen!2sus!4v1721677911391!5m2!1sen!2sus" width=400 height=300 style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11866.188410977109!2d-87.6793681!3d41.967062!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fd2184073f2c3%3A0x2de13d6d8da8da39!2sThe%20Perfect%20Cup!5e0!3m2!1sen!2sus!4v1721677911391!5m2!1sen!2sus" width=400 height=200 style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         
         </div>
         </div>
