--- a/html/cafe.html
+++ b/html/cafe.html
@@ -154,7 +154,7 @@
 <div class="our-story">
 
 <div class="our-story1">
-  <img id="coffee"
+  <img id="food"
   src="../media/images/iceddrink2.jpg">
 
   </div> 
@@ -318,13 +318,16 @@
 
 
 </div>
+
+
+
 </div>
 
 
 <div class="our-story">
 
     <div class="our-story1">
-      <img id="coffee"
+      <img id="food"
       src="../media/images/turkey.png">
     
       </div> 
