--- a/html/about.html
+++ b/html/about.html
@@ -59,7 +59,7 @@
     <!-- Top Navigation Menu -->
     <div class="topnav">
 
-      <a href="#home" class="active">The Perfect Cup</a>
+      <a href="../index.html" class="active">The Perfect Cup</a>
  
   
     <!-- Navigation links (hidden by default) -->
