--- a/html/contact.html
+++ b/html/contact.html
@@ -101,7 +101,7 @@
     
 
         <div id="map">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11866.188410977109!2d-87.6793681!3d41.967062!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fd2184073f2c3%3A0x2de13d6d8da8da39!2sThe%20Perfect%20Cup!5e0!3m2!1sen!2sus!4v1721677911391!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11866.188410977109!2d-87.6793681!3d41.967062!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fd2184073f2c3%3A0x2de13d6d8da8da39!2sThe%20Perfect%20Cup!5e0!3m2!1sen!2sus!4v1721677911391!5m2!1sen!2sus" width="350" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         
         </div>
         </div>
