--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@
             <a href="html/about.html">ABOUT</div>
 
               <div id="cafe">
-                <a href="index.html">CAFE</div>
+                <a href="html/cafe.html">CAFE</div>
 
                   <div id="contact">
-                    <a href="index.html">CONTACT</div>
+                    <a href="html/contact.html">CONTACT</div>
 
                   <!-- <div id="insta">
                     <a href="https://www.instagram.com/perfectcupchicago/">
