--- a/html/cafe.html
+++ b/html/cafe.html
@@ -409,7 +409,7 @@
        
         <div class="our-story2">
           <h3>Cafe Umbria Partnership</h3>
-          <h4>The Perfect Cup proudly uses Caffe Umbria coffee, which is locally roasted here in Chicago. Try our different house blends in a Cafe Au Lait or an Anne's Special!</h4>
+          <h4>The Perfect Cup proudly uses Cafe Umbria coffee, which is locally roasted here in Chicago. Try our different house blends in a Cafe Au Lait or an Anne's Special!</h4>
         </div>
 
         <div class="our-story1">
