--- a/html/about.html
+++ b/html/about.html
@@ -92,7 +92,7 @@
 
     <div class="our-story">
       <div class="our-story1">
-        <img id="coffee-pages" src="../media/images/shelf.png">
+        <img id="coffee-pages" src="../photos-imports/giftcard.JPG">
       </div> 
       <div class="our-story2">
         <h3>About Us</h3>
@@ -102,7 +102,7 @@
 
     <div class="our-story">
       <div class="our-story1">
-        <img id="coffee-pages" src="../media/images/syrups2.png">
+        <img id="coffee-pages" src="../photos-imports/perfectcup-logo.JPG">
       </div> 
       <div class="our-story2">
         <h3>Our Journey</h3>
@@ -114,7 +114,7 @@
 
     <div class="our-story">
       <div class="our-story1">
-        <img id="coffee-pages" src="../media/images/pastries.png">
+        <img id="coffee-pages" src="../photos-imports/coffee bags.JPG">
       </div> 
       <div class="our-story2">
         <h3>Our Commitment</h3>
@@ -123,6 +123,16 @@
       </div>
     </div>
   </div> 
+
+
+
+
+ 
+
+
+
+
+
 
   <div class="flex-container-footer">
 
