--- a/html/cafe.html
+++ b/html/cafe.html
@@ -135,7 +135,7 @@
   
     
         <img id="coffee"
-        src="../media/images/latte.jpg">
+        src="../media/video/cafe.gif">
 
         </div>  
 
@@ -155,7 +155,7 @@
 
 <div class="our-story1">
   <img id="food"
-  src="../media/images/iceddrink2.jpg">
+  src="../photos-imports/donuts-coffee.JPG">
 
   </div> 
 
@@ -401,7 +401,32 @@
     </div>
    
     </div>
+  
     
+
+    <div class="scrollmenu">
+
+      <img id="coffee-scroll"
+        src="../photos-imports/cafe.JPG">
+
+        <img id="coffee-scroll"
+        src="../photos-imports/donuts.JPG">
+
+        <img id="coffee-scroll"
+        src="../photos-imports/cookies.JPG">
+
+        <img id="coffee-scroll"
+        src="../photos-imports/latte3.JPG">
+
+    </div>
+
+
+
+
+
+
+
+
 
 <div class="umbria">
 
