--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
   
     
             <img id="coffee"
-            src="media/images/latte.jpg">
+            src="photos-imports/illustration.JPG">
     
             </div>  
 
