--- a/html/cafe.html
+++ b/html/cafe.html
@@ -410,16 +410,16 @@
     <div class="scrollmenu">
 
       <img id="coffee-scroll"
-        src="../photos-imports/cafe.JPG">
+        src="../photos-imports/bear.JPG">
 
         <img id="coffee-scroll"
-        src="../photos-imports/donuts.JPG">
+        src="../photos-imports/cookies.png">
 
         <img id="coffee-scroll"
-        src="../photos-imports/cookies.JPG">
+        src="../photos-imports/donuts3.png">
 
         <img id="coffee-scroll"
-        src="../photos-imports/latte3.JPG">
+        src="../photos-imports/latte3.png">
 
     </div>
 
