--- a/html/cafe.html
+++ b/html/cafe.html
@@ -329,8 +329,10 @@
 
 
     <div class="our-story1">
+      <!-- <img id="food"
+      src="../photos-imports/breakfast.JPG"> -->
       <img id="food"
-      src="../photos-imports/breakfast.JPG">
+      src="../media/images/turkey2.png">
     
       </div> 
     
@@ -409,8 +411,14 @@
 
     <div class="scrollmenu">
 
-      <img id="coffee-scroll"
-        src="../photos-imports/bear.JPG">
+      <!-- <img id="coffee-scroll"
+        src="../photos-imports/bear.JPG"> -->
+
+        <img id="coffee-scroll"
+        src="../photos-imports/cafe1.png">
+
+        <img id="coffee-scroll"
+        src="../photos-imports/cafe2.png">
 
         <img id="coffee-scroll"
         src="../photos-imports/cookies.png">
