--- a/html/contact.html
+++ b/html/contact.html
@@ -126,7 +126,8 @@
 
         <div class="our-story">
             <div class="our-story1">
-                <img id="coffee-pages" src="../media/images/outside2.jpg">
+                <!-- <img id="coffee-pages" src="../media/images/outside2.jpg"> -->
+                <img id="coffee-pages" src="../media/images/outside.png">
             </div>
             <div class="our-story3">
                 <h3>Connect With Us!</h3>
