--- a/html/about.html
+++ b/html/about.html
@@ -102,7 +102,8 @@
 
     <div class="our-story">
       <div class="our-story1">
-        <img id="coffee-pages" src="../photos-imports/perfectcup-logo.JPG">
+        <!-- <img id="coffee-pages" src="../photos-imports/perfectcup-logo.JPG"> -->
+        <img id="coffee-pages" src="../media/images/pastries2.png">
       </div> 
       <div class="our-story2">
         <h3>Our Journey</h3>
