--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         src="media/images/ryan1.jpg">
 
         <img id="coffee-scroll"
-        src="media/images/outside2.jpg">
+        src="media/images/latte.jpg">
 
     </div>
 
